# arbitrage-bot

./: .gitignore  README.md  build.sh  requirements.txt  test_arbitrage_opportunity.py  test_order_book.py  test_timestamp_handling.py
app/: api.py  arbitrage.py  config.py  exchanges.py  main.py  models.py
backend/: pyproject.toml
backend/app/: api.py  config.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  pwa.ts  types.ts  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: ConnectTab.tsx  DashboardTab.tsx  TestModeTab.tsx
frontend/src/components/ui/: alert.tsx  card.tsx  input.tsx
frontend/src/types/: global.d.ts  index.ts
